# create-rust-github-repo

./: CHANGELOG.md  Cargo.toml  README.md  README.ts  install.sh  lefthook.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
