[package]
name = "create-rust-github-repo"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "`create-rust-github-repo` is a CLI program that creates a new repository on GitHub, clones it locally, initializes a Rust project, copies the configs from a pre-existing directory."
homepage = "https://github.com/DenisGorbachev/create-rust-github-repo"
repository = "https://github.com/DenisGorbachev/create-rust-github-repo"
readme = "README.md"
keywords = ["github", "utils"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.navigator]
tagline = "my-awesome-android-app"
summary = ""
announcement = ""

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.24", features = ["derive"] }
fs-err = "2.11.0"
derive_setters = "0.1.6"
