[package]
name = "create-rust-github-repo"
version = "0.6.0"
edition = "2021"
description = "`create-rust-github-repo` is a CLI program that creates a new repository on GitHub, clones it locally, initializes a Rust project, copies the configs from a pre-existing directory."
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/create-rust-github-repo"
repository = "https://github.com/DenisGorbachev/create-rust-github-repo"
readme = "README.md"
keywords = ["github", "utils"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.details]
title = "Create Rust GitHub repo"
tagline = ""
summary = ""
announcement = ""

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.24", features = ["derive", "env"] }
derive-new = "0.7.0"
derive_setters = "0.1.6"
fs_extra = "1.3.0"
tokio = { version = "1.43.1", features = ["full", "process"] }
